<resources>
    <string name="app_name">یادآور</string>
    <string name="english_app_name">Reminder</string>
    <string name="login_dummy">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمزعبور</string>
    <string name="login">ورود</string>
    <string name="invalid_username_password">نام کاربری یا رمزعبور اشتباه است</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Navigation Item-->
    <string name="home">یادآورهای من</string>
    <string name="history">تاریخچه</string>
    <string name="settings">تنظیمات</string>
    <string name="about">درباره ما</string>
    <string name="logout">خروج</string>

    <string name="version">نسخه</string>
    <string name="time">ساعت</string>
    <string name="date">تاریخ</string>
    <string name="repeat">تکرار</string>

    <string name="repeat_dialog_title">نوع تکرار</string>
    <string name="custom_repeat_dialog_title">شخصی سازی</string>
    <string name="every">هر</string>
    <string name="on">در زمان های</string>
    <string name="note">یادداشت</string>
    <string name="title_hint">...</string>
    <string name="add_reminder">افزودن یادآور</string>
    <string name="ringtone">آهنگ زنگ</string>
    <string name="choose_ringtone">انتخاب زنگ</string>
    <string name="confirm">تایید</string>
    <string name="cancel">لغو</string>
    <string name="canceling">لغوکردن</string>
    <string name="add">افزودن</string>
    <string name="not_updated_time_error">زمان وارد شده مربوط به گذشته است، تغییرش دهید.</string>
    <string name="duplicate_time_error">زمان وارد شده تکراریست.</string>
    <string name="title">عنوان</string>
    <string name="ok">تایید</string>
    <string name="history_delete_message">آیا میخواهید این نوشته پاک شود؟</string>
    <string name="alarm_delete_message">آیا میخواهید این یادآور پاک شود؟</string>
    <string name="history_is_done_message">آیا میخواهید این رکورد را به انجام شده تغییر دهید؟</string>
    <string name="later">بعدا</string>
    <string name="snooze">زنگ زدن</string>
    <string name="snooze_delay">وقفه بین هر زنگ</string>
    <string name="snooze_count">تعداد دفعات هشدار</string>
    <string name="full_hour_format">فرمت 24 ساعت</string>
    <string name="other_options">تنظیمات دیگر</string>
    <string name="isVibrate">لرزش</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
