<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.splash.SplashActivity">

    <data>

        <variable
            name="viewModel"
            type="com.fearefull.todoreminder.ui.alarm_manager.AlarmManagerViewModel" />

    </data>

    <FrameLayout
        android:id="@+id/snoozeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="6dp"
        android:layout_marginTop="-24dp">

        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_height="88dp"
            android:layout_width="match_parent"
            android:id="@+id/snoozeHeader"
            app:expansion_headerIndicator="@id/snoozeHeaderIndicator"
            app:expansion_layout="@id/snoozeExpansionLayout"
            app:expansion_toggleOnClick="false"
            android:translationZ="8dp">

            <com.github.florent37.shapeofview.shapes.ArcView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp"
                app:shape_arc_height="-24dp"
                app:shape_arc_position="top">

                <com.github.florent37.shapeofview.shapes.ArcView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:shape_arc_height="24dp"
                    app:shape_arc_position="bottom">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primaryColorGradient3"/>

                    <RelativeLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:onClick="@{() -> viewModel.headerSnoozeClick()}"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/snoozeHeaderIcon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_timer_black_24dp"
                            android:tint="@color/primaryTextColorDarkTheme"/>

                        <TextView
                            style="@style/TextStyle.Title"
                            android:id="@+id/snoozeHeaderText"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@id/snoozeHeaderIcon"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="8dp"
                            android:textColor="@color/primaryTextColorDarkTheme"
                            android:text="@string/snooze" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:adjustViewBounds="true"
                            android:id="@+id/snoozeHeaderIndicator"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:tint="@color/primaryTextColorDarkTheme"
                            app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                    </RelativeLayout>
                </com.github.florent37.shapeofview.shapes.ArcView>

            </com.github.florent37.shapeofview.shapes.ArcView>
            <include layout="@layout/curved_line_bg_color" />

        </com.github.florent37.expansionpanel.ExpansionHeader>
        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/snoozeExpansionLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:translationZ="6dp"
            android:background="@color/primaryLightColorLightTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="72dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle.Title.Sub"
                        android:text="@string/snooze_delay"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/secondaryTextColorLightTheme"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/default_half_half_layout_padding"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="@null"
                            android:onClick="@{() -> viewModel.onDecreaseSnoozeDelay()}">

                            <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center"
                                app:fabColor="@color/secondaryColorLightTheme">
                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_remove_black_24dp"
                                    android:tint="@color/whiteColor"/>
                            </com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout>
                        </FrameLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle.Title.Sub"
                            android:text="@{viewModel.snoozeDelayString}"
                            android:layout_gravity="center"
                            android:paddingLeft="@dimen/default_layout_padding"
                            android:paddingRight="@dimen/default_layout_padding"
                            android:textColor="@color/primaryTextColorLightTheme"/>

                        <FrameLayout
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="@null"
                            android:onClick="@{() -> viewModel.onIncreaseSnoozeDelay()}">

                            <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center"
                                app:fabColor="@color/secondaryColorLightTheme">
                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_add_black_24dp"
                                    android:tint="@color/whiteColor"/>
                            </com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout>
                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundColorLightTheme"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle.Title.Sub"
                        android:text="@string/snooze_count"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/secondaryTextColorLightTheme"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/default_half_half_layout_padding"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="@null"
                            android:onClick="@{() -> viewModel.onDecreaseSnoozeCount()}">

                            <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center"
                                app:fabColor="@color/secondaryColorLightTheme">
                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_remove_black_24dp"
                                    android:tint="@color/whiteColor"/>
                            </com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout>
                        </FrameLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextStyle.Title.Sub"
                            android:text="@{viewModel.snoozeCountString}"
                            android:layout_gravity="center"
                            android:paddingLeft="@dimen/default_layout_padding"
                            android:paddingRight="@dimen/default_layout_padding"
                            android:textColor="@color/primaryTextColorLightTheme"/>

                        <FrameLayout
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="@null"
                            android:onClick="@{() -> viewModel.onIncreaseSnoozeCount()}">

                            <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center"
                                app:fabColor="@color/secondaryColorLightTheme">
                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_add_black_24dp"
                                    android:tint="@color/whiteColor"/>
                            </com.robertlevonyan.views.customfloatingactionbutton.FloatingActionLayout>
                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </com.github.florent37.expansionpanel.ExpansionLayout>
    </FrameLayout>
</layout>